# PyRadioLib

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  README.md
cmake/: CollectSources.cmake  CopyHeaders.cmake  FindSources.cmake
cmake/Modules/: FindRadioLib.cmake  Findpybind11.cmake  Findradiolib.cmake
cmake/toolchains/: rpi-arm64.cmake
docs/: rpi-build.md
python/: .gitignore  conftest.py  pyproject.toml  requirements.txt  test_pyradiolib_base.py  test_pyradiolib_hal.py  test_pyradiolib_modules.py  test_pyradiolib_modules_base.py  utils.py
python/MockPyHal/: hal.py  sx126x.py
python/mock/: hal.py  module.py  sx126x.py
src/: CMakeLists.txt
src/core/: CMakeLists.txt  macros.h
src/hal/: CMakeLists.txt  MockHal.cpp  MockHal.h
src/mock/: CMakeLists.txt  MockContext.cpp  MockContext.h  MockHal.cpp  MockHal.h  MokGpio.cpp  MokGpio.h
src/py/: CMakeLists.txt  bind_hal.cpp  bind_hal.h  bind_mock.cpp  bind_mock.h  bind_module.cpp  bind_module.h  bind_types.cpp  bind_types.h  module.cpp
src/py/modules/: bind_enums.cpp  bind_enums.h  bind_sx1261.cpp  bind_sx1262.cpp  bind_sx1262.h  bind_sx1268.cpp  bind_sx1268.h  bind_sx126x.cpp  bind_sx126x.h
src/py/modules/sx126x/: bind_sx1261.cpp  bind_sx1261.h  bind_sx1262.cpp  bind_sx1262.h  bind_sx1268.cpp  bind_sx126x.cpp  bind_types.cpp  bind_types.h
src/py/pkg/: __init__.py.in
src/py/protocols/: bind_physical_layer.cpp  bind_physical_layer.h
src/tests/: CMakeLists.txt  radiolib.cpp
tests/: CMakeLists.txt  main.cpp  radiolib.cpp
